--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 serde = { version = "1.0.175", features = [ "derive" ] }
 serde_json = "1.0.103"
 regex = "1.9.1"
+lazy-regex = "3.0.0"
