--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0.219", features = [ "derive" ] }
 serde_json = "1.0.140"
 regex = "1.11.1"
 lazy-regex = "3.4.1"
+clap = { version = "4.5.38" , features = [ "derive" ] }
