--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde_json = "1.0.140"
 regex = "1.11.1"
 lazy-regex = "3.4.1"
 clap = { version = "4.5.38", features = [ "derive" ] }
+rand = "0.9.1"
 
 [profile.dev]
 opt-level = 2
