--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ lazy-regex = "3.4.1"
 clap = { version = "4.5.38", features = [ "derive" ] }
 rand = "0.9.1"
 build_html = "2.6.0"
+anyhow = "1.0.98"
+reqwest = { version = "0.12.18", default-features = false, features = [ "blocking", "rustls-tls" ] }
 
 [profile.dev]
 opt-level = 2
