--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rand = "0.9.1"
 anyhow = "1.0.98"
 itertools = "0.14.0"
 reqwest = { version = "0.12.18", default-features = false, features = [ "blocking", "rustls-tls" ] }
+bigdecimal = "0.4.8"
 
 [profile.dev]
 opt-level = 2
