--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ itertools = "0.14.0"
 reqwest = { version = "0.12.18", default-features = false, features = [ "blocking", "rustls-tls" ] }
 indexmap = { version = "2.9.0", features = [ "serde" ] }
 # css-minify = "0.5.2"
-rusqlite = { version = "0.36.0", features = ["bundled"] }
+rusqlite = { version = "0.36.0", features = ["bundled", "backup"] }
 
 [profile.dev]
 opt-level = 2
